tdf#113714 vcl menu bar window: avoid flicker

Regression from commit 458a827e96523ac52d021f1fd3653b5a734940c0 (further
refactor Menu to use RenderContext, 2015-05-15), if we do full paint
instead of incremental paint, then need to ensure that an intermediate
state is not painted.

Paint happens at idle time by default on Windows (OpenGL) and also on
Linux (gtk3), but some other backends like Windows GDI had flicker, this
fixes the problem.

Change-Id: I530166cea93513aec4648dd0a385359f4b998b6f